# vibe-rag

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: .ralph-bug-hunter.md  .ralph-triage.md  deep-scan-defects.md  deep-scan-state.json  ralph-loop-prompt.md  ralph-loop.local.md  settings.json
.claude/agents/: fully-strapped.md  tools-reviewer.md
.claude/skills/eval/: SKILL.md
.claude/skills/release/: SKILL.md
.codex/: config.toml  hooks.json
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
.vibe/: config.toml  index.db-journal
.vibe/skills/semantic-repo-search/: SKILL.md
docs/: maintainer-guide.md  memory-event-convention.md  setup-guide.md  user-guide.md
evals/: agent-os.toml  codex.toml  core_repos.toml  local_repos.toml  local_repos.toml.example
evals/results/: core_repos.20260323T044931Z.json  fda-platform-eval.20260323T033613Z.json  goodware-eval.20260323T032753Z.json  persistent-memory.vibe-rag.20260323T051015Z.json
scripts/: claude_posttool_pytest.py  claude_pretool_guard.py  prepare_release.py  run-vibe-rag  run_retrieval_eval.py
site/: index.html  package.json  vite.config.ts
site/public/: CNAME  robots.txt  sitemap.xml
site/src/: App.test.tsx  App.tsx  index.css  main.tsx  site-docs.ts
site/src/components/: Header.tsx  MarkdownDocument.test.ts  MarkdownDocument.tsx
site/src/pages/: HomePage.tsx  MarkdownPage.tsx
src/vibe_memory/: cli.py  server.py
src/vibe_memory/db/: migrations.py  postgres.py  sqlite.py
src/vibe_memory/indexing/: doc_chunker.py  embedder.py  session_indexer.py
src/vibe_memory/setup/: interactive.py  neon.py
src/vibe_memory/templates/: AGENTS.md
src/vibe_memory/tools/: forget.py  index_project.py  ingest_doc.py  remember.py  search_code.py  search_memory.py
src/vibe_rag/: chunking.py  cli.py  config.py  constants.py  hook_bridge.py  paths.py  server.py  tools.py  types.py
src/vibe_rag/db/: postgres.py  sqlite.py
src/vibe_rag/indexing/: code_chunker.py  embedder.py  session_indexer.py
src/vibe_rag/setup/: interactive.py  neon.py
src/vibe_rag/template_bundle/: mcp.json
src/vibe_rag/templates/: AGENTS.md
src/vibe_rag/tools/: __init__.py  _helpers.py  forget.py  index.py  index_project.py  ingest_doc.py  memory.py  remember.py  search.py  search_code.py  search_memory.py  session.py  status.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_code_chunker.py  test_config.py  test_conftest_fixtures.py  test_constants.py  test_db_edge_cases.py  test_doc_chunker.py  test_embedder.py  test_maintainer_hooks.py  test_memory_eval.py  test_postgres.py  test_prepare_release.py  test_retrieval_eval.py  test_server.py  test_session_indexer.py  test_sqlite.py  test_tools.py
(+26 files in other folders)
