[project]
name = "vibe-rag"
version = "0.0.1"
description = "Centralized memory and semantic code search for Mistral Vibe"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "tree-sitter>=0.22",
    "tree-sitter-languages>=1.10",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
vibe-rag = "vibe_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_rag"]
