[project]
name = "vibe-rag"
version = "0.0.23"
description = "Semantic code search and persistent memory MCP server for Mistral Vibe"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "ollama>=0.6.1",
    "tree-sitter>=0.22",
    "tree-sitter-languages>=1.10",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.urls]
Homepage = "https://github.com/jasencarroll/vibe-rag"
Repository = "https://github.com/jasencarroll/vibe-rag"
Issues = "https://github.com/jasencarroll/vibe-rag/issues"

[project.scripts]
vibe-rag = "vibe_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_rag"]
