[project]
name = "vibe-rag"
version = "0.1.1"
description = "Semantic repo search and persistent memory MCP server for coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
    "sqlite-vec>=0.1",
    "httpx>=0.27",
    "ollama>=0.6.1",
    "tree-sitter>=0.22",
    "tree-sitter-languages>=1.10",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "ruff>=0.11",
    "mypy>=1.15",
]

[project.urls]
Homepage = "https://github.com/jasencarroll/vibe-rag"
Repository = "https://github.com/jasencarroll/vibe-rag"
Issues = "https://github.com/jasencarroll/vibe-rag/issues"

[project.scripts]
vibe-rag = "vibe_rag.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E9", "F"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
files = [
    "src/vibe_rag/chunking.py",
    "src/vibe_rag/indexing/code_chunker.py",
    "src/vibe_rag/types.py",
]
